[package]
name = "borg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
env_logger = "0.11.2"
globset = "0.4.14"
log = "0.4.21"
orgize = { version = "0.9.0", features = ["syntect"] }
seahorse = "2.2.0"
serde = { version = "1.0.197", features = ["derive"] }
toml = { version = "0.8.10", features = ["parse"] }
walkdir = "2.4.0"
