[package]
name = "borg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
chrono = "0.4.35"
env_logger = "0.11.2"
globset = "0.4.14"
log = "0.4.21"
orgize = { version = "0.9.0", features = ["syntect"] }
relative-path = "1.9.2"
rss = { version = "2.0.7", features = ["chrono"] }
seahorse = "2.2.0"
serde = { version = "1.0.197", features = ["derive"] }
thiserror = "1.0.57"
toml = { version = "0.8.10", features = ["parse"] }
walkdir = "2.4.0"
